# tinyhnsw

./: .gitignore  README.md  pyproject.toml
chapters/: 0_introduction.md  1_nearest_neighbor_search.md  3_skip_lists.md  5_hnsw.md  7_filtering.md  README.md
examples/multimodal_retrieval/: README.md  multimodal_retrieval.py
examples/text_retrieval/: README.md  text_retrieval.py
tests/: test_knn.py  test_skip_list.py
tinyhnsw/: __init__.py  filter.py  hnsw.py  index.py  knn.py  nsw.py  skip_list.py  utils.py  visualization.py
tinyhnsw/teaching/: nsw.py
